css/crane.css
@font-face {
    font-family: 'Kung Fu Panda';
    src: url('KungFuPanda.woff2') format('woff2'),
        url('KungFuPanda.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

h1 {
    color: #CD113B
  }
  
  h2 {
    color: #CD113B
  }
  
  h3 {
    color: #CD113B
  }
  
  #info {
    color: #52006A
  }

body {
    font-family: 'Kung Fu Panda';
    background-color: #FFA900;
    text-align: center;
}

a {
    text-decoration: none;
    color: #52006A;
    background-color: #FF7600;
    padding: 10px;
}

.center {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 50%;
  }

